--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ GOOGLE_USER=
 GOOGLE_APP_PASSWORD=
 HASH_SECRET=
 SENDER_MAIL=masumkhan081.3s@gmail.com
-SENDER_MAIL_PASSWORD=uigctmtbjzdyfxoa
+SENDER_MAIL_PASSWORD=fjtjmfhnkmrwtvbp
 MAIL_HOST=smtp.gmail.com
 tkn_header_key=authorization
-BASE_URL= http://localhost:3000/
+BASE_URL= http://localhost:3000
